# demos

./: .gitignore  .gitmodules  README.md  biome.jsonc
bonsai-pay/: .env.example  .gitignore  Cargo.toml  README.md  remappings.txt
bonsai-pay/app/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml  wagmi.config.ts
bonsai-pay/app/src/: App.tsx  generated.ts  index.css
bonsai-pay/apps/: Cargo.toml  README.md
bonsai-pay/apps/src/: lib.rs
bonsai-pay/contracts/: BonsaiPay.sol  EvenNumber.sol  README.md
bonsai-pay/contracts/src/: ZRP.sol  ZRPLibs.sol
bonsai-pay/methods/: Cargo.toml
bonsai-pay/methods/guest/: Cargo.toml
bonsai-pay/methods/src/: lib.rs
bonsai-pay/oidc-validator/: Cargo.toml
bonsai-pay/oidc-validator/src/: certs.rs  lib.rs
bonsai-pay/old/app/: package-lock.json  vite.config.ts
bonsai-pay/old/contracts/: .gitignore  README.md  sol-deps.sh
bonsai-pay/old/zkvm/: Dockerfile  README.md
bonsai-pay/script/: Deploy.s.sol
bonsai-pay/tests/: BonsaiPay.t.sol  EvenNumber.t.sol
bonsai-pay/ui/: .env.example  index.html  package.json  pnpm-lock.yaml  wagmi.config.ts
bonsai-pay/ui/src/: App.tsx  generated.ts  index.css  main.tsx
bonsai-pay/zkvm/: .gitignore  Cargo.toml
bonsai-pay/zkvm/host/: Cargo.toml
bonsai-pay/zkvm/host/src/: main.rs
bonsai-pay/zkvm/methods/: Cargo.toml  README.md
bonsai-pay/zkvm/methods/guest/: Cargo.toml
bonsai-pay/zkvm/methods/guest/src/: main.rs
bonsai-pay/zkvm/oidc-validator/: Cargo.toml
bonsai-pay/zkvm/oidc_validate/: Cargo.toml
cosmwasm-verifier/: .gitignore  README.md
cosmwasm-verifier/cosmwasm/: .gitignore  Cargo.toml
cosmwasm-verifier/cosmwasm/.cargo/: config.toml
cosmwasm-verifier/cosmwasm/src/: lib.rs
cosmwasm-verifier/risc0-example/host/: Cargo.toml
cosmwasm-verifier/risc0-example/methods/: Cargo.toml
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
near-verifier/: .gitignore  Cargo.toml  README.md
near-verifier/risc0-example/host/: Cargo.toml
near-verifier/src/: lib.rs
near-verifier/tests/: test_basics.rs
near-zk-light-client/: Cargo.toml  README.md
near-zk-light-client/host/: Cargo.toml
near-zk-light-client/host/src/: main.rs
near-zk-light-client/methods/guest/: Cargo.toml
near-zk-light-client/methods/guest/src/: main.rs
near-zk-light-client/outcome_methods/: Cargo.toml
near-zk-light-client/outcome_methods/guest/: Cargo.toml
near-zk-light-client/outcome_methods/guest/src/: main.rs
near-zk-light-client/test-vectors/: mainnet-80000000-81000000.json
near-zk-light-client/types/: Cargo.toml
near-zk-light-client/types/src/: approval.rs  crypto.rs  hash.rs  lib.rs  merkle.rs  serde_dec.rs  validator_stake.rs
stwo-verifier/host/: Cargo.toml
stwo-verifier/host/src/: main.rs
stwo-verifier/methods/guest/: Cargo.toml
tinygo-example/: .gitignore  .gitmodules  Makefile  README.md
tinygo-example/guest/: go.mod  main.go
tinygo-example/host/: Cargo.toml
tinygo-example/host/src/: main.rs
tinygo-example/platform/: Cargo.toml
tinygo-example/platform/src/: lib.rs
zk-auth/: .env.example  .gitignore  README.md  bun.lockb  middleware.ts  next.config.js  package.json  tailwind.config.ts  tsconfig.json
zk-auth/.husky/: pre-commit
zk-auth/package/: .npmignore  README.md  bun.lockb  index.html  package.json  risc0-zkauth-0.0.2.tgz  risc0-zkauth-0.0.3.tgz  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
zk-auth/package/src/: App.tsx  do-snark-proving.ts  do-stark-proving.ts  download-button.tsx  example.tsx  index.css  index.ts  main.tsx  prove-button.tsx  sign-in-button.tsx  sign-out-button.tsx  snark-table.tsx  stark-table.tsx  style.css  twitch-user-infos.tsx  use-twitch-auth.ts  user-infos.tsx  zk-auth.tsx
zk-auth/public/vite/: index.html
zk-auth/src/: env.js  middleware.ts
zk-auth/src/app/: layout.tsx  page.tsx  providers.tsx  zk-auth-example.tsx
zk-kyc/: .env.example  .gitmodules  Cargo.toml  README.md  remappings.txt
zk-kyc/app/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  wagmi.config.ts
zk-kyc/app/src/: App.tsx  generated.ts  index.css
zk-kyc/apps/: Cargo.toml
zk-kyc/apps/src/: lib.rs
zk-kyc/contracts/: .env.example  EvenNumber.sol  README.md  foundry.toml  zkKYC.sol
zk-kyc/contracts/script/: Deploy.s.sol
zk-kyc/contracts/src/: ZID.sol  ZIDLibs.sol  ZRP.sol  ZRPLibs.sol
zk-kyc/contracts/test/: ZID.t.sol  (+1 more)
zk-kyc/methods/guest/: Cargo.toml
zk-kyc/old/zkvm/: .env.example  Cargo.toml
zk-kyc/old/zkvm/host/: Cargo.toml
zk-kyc/old/zkvm/host/src/: lib.rs
zk-kyc/old/zkvm/methods/guest/: Cargo.toml
zk-kyc/old/zkvm/oidc-validator/src/: lib.rs
zk-kyc/script/: Deploy.s.sol
zk-kyc/tests/: zkKYC.t.sol
zk-kyc/ui/: .env.example  index.html  wagmi.config.ts
zk-kyc/zkvm/: README.md
zk-socials/: .env.example  README.md  bun.lockb  next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
zk-socials/apps/: README.md
zk-socials/contracts/: zkKYC.sol
zk-socials/oidc-validator/: README.md
zk-socials/script/: Deploy.s.sol
zk-socials/social_validator/: Cargo.toml  bonsai_cli.sh
zk-socials/social_validator/host/: Cargo.toml
zk-socials/social_validator/host/src/: main.rs
zk-socials/social_validator/methods/guest/: Cargo.toml
zk-socials/social_validator/methods/guest/src/: main.rs
zk-socials/social_validator/oidc-validator/: Cargo.toml
zk-socials/social_validator/oidc-validator/src/: certs.rs  lib.rs
zk-socials/src/: auth.ts  env.js  middleware.ts  wagmi.ts
zk-socials/tests/: zkKYC.t.sol
zk-socials/ui/: .env.example  README.md  biome.jsonc  bun.lockb  next.config.js  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  wagmi.config.ts
zkdoom/: .gitignore  Cargo.toml  README.md  e1m5sec.lmp
zkdoom/host/: Cargo.toml
zkdoom/host/src/: main.rs
zkdoom/methods/guest/: Cargo.toml
zkdoom/methods/guest/src/: main.rs
zkdoom/puredoom-rs/: Cargo.toml  README.md  build.rs  zkvm-doom.patch
zkdoom/zkdoom-common/: Cargo.toml
(+210 files in other folders)
