[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.1.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
alloy-trie = "0.6.0"
anyhow = "1.0.89"
arrayvec = { version = "0.7", features = ["serde"] }
alloy = { version = "0.4.2", features = ["full"] }
tokio = { version = "1.40.0", features = ["rt", "macros", "rt-multi-thread"] }
alloy-rlp = "0.3.8"
alloy-eips = "0.4.2"
postcard = { version = "1.0", features = ["alloc"] }
serde_json = "1.0"