[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.21.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
near-zk-types = { path = "../types" }
serde_json = "1.0"
borsh = "1.3.0"
anyhow = "1.0"
near-jsonrpc-client = "0.8.0"
near-primitives = "0.21.2"
