[package]
name = "near-zk-types"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = { version = "1.3.0", features = ["derive"] }
bs58 = "0.4.0"
derive_more = "0.99.17"
serde = "1.0.195"
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
near-primitives-core = "0.19"
thiserror = "1.0.56"
ed25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.0-risczero.1" }

[dev-dependencies]
serde_json = "1.0"

[patch.crates-io]
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risc0" }