[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.21.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
stwo = { git = "https://github.com/austinabell/stwo", branch = "austin/serde", features = ["serde"] }
# stwo = { path = "../../../../../../starkware-libs/stwo", features = ["serde"] }
