[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.3.0", features = ["derive"] }
image = "0.24.8"
puredoom-rs = { path = "../puredoom-rs" }
risc0-zkvm = { version = "0.20.1", features = ["prove"] }
serde = "1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
typetag = "0.2.15"
zkdoom-common = { path = "../zkdoom-common" }
bonsai-sdk = "0.6.1"
hex = "0.4.3"
bytemuck = "1.14.3"
bincode = "1.3.3"