[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[package.metadata.risc0]
methods = ["guest"]

[dev-dependencies]
alloy-primitives = "0.3.3"
alloy-sol-types = "0.3.2"
oidc_validate = { path = "../oidc_validate/" }
risc0-zkvm = { version = "0.19.0" }

[build-dependencies]
risc0-build = { version = "0.19.0" }
