[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jwt-validator"
path = "src/bin/jwt_validator.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "0.6", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.6" }
risc0-zkvm = {  version = "0.21", default-features = false, features = ['std'] }
oidc-validator = { path = "../../oidc-validator" }

[profile.release]
lto = "thin"
