[package]
name = "social_validator"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "1.0.5", default-features = false, features = [ "std" ] }
oidc-validator = { path = "../../oidc-validator" }
serde_json = "1.0.116"
serde = "1.0.198"
hex = "0.4.3"
