[package]
name = "jwt_validate"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "0.19.1", features = ['std'], default-features = false }
oidc-validator = { path = "../../oidc-validator/"}
alloy-sol-types = "0.6.0"
alloy-primitives = "0.6.0"
alloy-sol-macro = "0.6.0"
hex = "0.4.3"
